# deep_research

./: CLAUDE.md  README.md  deep_research.py  email_agent.py  pyproject.toml  requirements-full.txt  requirements.txt  research_manager.py  writer_agent.py
.claude/: settings.json
.github/workflows/: update_space.yml
