[project]
name = "deep-research"
version = "0.1.0"
description = "AI Agents that researches a given topic, generates a report in markdown and emails it to the user."
requires-python = ">=3.11"
dependencies = [
    "gradio>=4.0.0",
    "python-dotenv>=1.0.0",
    "openai[agents]>=1.54.0",
    "pydantic>=2.0.0",
    "mailjet-rest>=1.3.0",
    "openai-agents>=0.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
